# squash_dir

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  README.md  autogen.sh  configure.ac  squash-dir
conf.d/: squash_dir
contrib/: clean.sh  emerge.sh  make.sh  release.sh  tarball.sh
init.d/: squash_dir
mk/: clean  commit  emerge  gc  make  release  tarball
portage/env/sys-fs/: squashfs-tools.in
sbin/: openrc-wrapper  squash_dir
squashfs-tools-patch/: README  squashfs-tools-3.3-progress-stderr.patch  squashfs-tools-3.4-progress-stderr.patch  squashfs-tools-4.0-progress-stderr.patch
systemd/: squash_dir.service  squash_dir@.service
zsh/: _openrc-wrapper  _squash_dir
